--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
+    "nodemon": "^2.0.6",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
