--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "nodemon": "^2.0.6",
+    "vercel": "^21.0.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
